<resources>
    <string name="app_name">AaHome</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="details">Details</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_activity_movie_details">MovieDetailsActivity</string>
    <string name="details_back">Back</string>
    <string name="details_rating">13+</string>
    <string name="details_name">Avengers: End Game</string>
    <string name="details_time">137 min</string>
    <string name="details_tagline">Action, Adventure, Fantasy</string>
    <string name="details_reviews">125 Reviews</string>
    <string name="details_storyline_title">Storyline</string>
    <string name="details_storyline">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="details_cast_title">Cast</string>
</resources>