<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/details_bg"
    tools:context=".MovieDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/details_top_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@mipmap/bg"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/details_gradient"
            app:layout_constraintBottom_toBottomOf="@id/details_top_pic"
            app:layout_constraintEnd_toEndOf="@id/details_top_pic"
            app:layout_constraintHeight_percent=".3"
            app:layout_constraintStart_toStartOf="@id/details_top_pic"
            app:layout_constraintTop_toTopOf="@id/details_top_pic"
            app:layout_constraintVertical_bias="1" />

        <TextView
            android:id="@+id/back_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/details_back"
            android:textColor="@color/star_gray"
            app:drawableStartCompat="@drawable/ic_arrow_back_10"
            app:layout_constraintBottom_toBottomOf="@id/details_top_pic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/details_top_pic"
            app:layout_constraintVertical_bias=".2" />

        <TextView
            android:id="@+id/rating_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_rect_rounded"
            android:elevation="5dp"
            android:padding="8dp"
            android:text="@string/details_rating"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/details_top_pic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/details_top_pic"
            app:layout_constraintVertical_bias=".8" />

        <TextView
            android:id="@+id/details_name_tv"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="2"
            android:text="@string/details_name"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/details_top_pic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_top_pic" />

        <TextView
            android:id="@+id/details_tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/details_tagline"
            android:textColor="@color/star_pink"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_name_tv" />

        <ImageView
            android:id="@+id/star1"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/ic_star_12_pink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/star2"
            app:layout_constraintTop_toBottomOf="@id/details_tagline" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="2dp"
            android:src="@drawable/ic_star_12_pink"
            app:layout_constraintStart_toEndOf="@id/star1"
            app:layout_constraintEnd_toStartOf="@id/star3"
            app:layout_constraintTop_toTopOf="@id/star1"
            app:layout_constraintBottom_toBottomOf="@id/star1" />

        <ImageView
            android:id="@+id/star3"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="2dp"
            android:src="@drawable/ic_star_12_pink"
            app:layout_constraintStart_toEndOf="@id/star2"
            app:layout_constraintEnd_toStartOf="@id/star4"
            app:layout_constraintTop_toTopOf="@id/star2"
            app:layout_constraintBottom_toBottomOf="@id/star2" />

        <ImageView
            android:id="@+id/star4"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="2dp"
            android:src="@drawable/ic_star_12_pink"
            app:layout_constraintEnd_toStartOf="@+id/star5"
            app:layout_constraintStart_toEndOf="@id/star3"
            app:layout_constraintTop_toTopOf="@id/star3"
            app:layout_constraintBottom_toBottomOf="@id/star3" />

        <ImageView
            android:id="@+id/star5"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="2dp"
            android:src="@drawable/ic_star_12_pink"
            app:layout_constraintStart_toEndOf="@+id/star4"
            app:layout_constraintEnd_toStartOf="@+id/details_review"
            app:layout_constraintTop_toTopOf="@id/star4"
            app:layout_constraintBottom_toBottomOf="@id/star4"
            app:tint="@color/star_gray" />

        <TextView
            android:id="@+id/details_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_reviews"
            android:textAllCaps="true"
            android:textColor="@color/star_gray"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/star5"
            app:layout_constraintTop_toTopOf="@id/star5"
            app:layout_constraintBottom_toBottomOf="@id/star5"/>

        <TextView
            android:id="@+id/details_storyline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:text="@string/details_storyline_title"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_tagline" />

        <TextView
            android:id="@+id/details_storyline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/details_storyline"
            android:textColor="@color/star_gray"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_storyline_title" />

        <TextView
            android:id="@+id/details_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/details_cast_title"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_storyline" />

        <androidx.cardview.widget.CardView
            android:id="@+id/ac1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent=".2"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/details_cast"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ac2">
            <ImageView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:scaleType="centerCrop"
               android:src="@drawable/ac1" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ac2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent=".2"
            app:layout_constraintTop_toBottomOf="@id/details_cast"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintStart_toEndOf="@id/ac1"
            app:layout_constraintEnd_toStartOf="@id/ac3"
            app:layout_constraintTop_toTopOf="@id/ac1"
            app:layout_constraintBottom_toBottomOf="@id/ac1">
            <ImageView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:scaleType="centerCrop"
               android:src="@drawable/ac2" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ac3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent=".2"
            app:layout_constraintTop_toBottomOf="@id/details_cast"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintStart_toEndOf="@id/ac2"
            app:layout_constraintEnd_toStartOf="@id/ac4"
            app:layout_constraintTop_toTopOf="@id/ac2"
            app:layout_constraintBottom_toBottomOf="@id/ac2">
            <ImageView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:scaleType="centerCrop"
               android:src="@drawable/ac3" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ac4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent=".2"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/details_cast"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintStart_toEndOf="@id/ac3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ac3"
            app:layout_constraintBottom_toBottomOf="@id/ac3">
            <ImageView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:scaleType="centerCrop"
               android:src="@drawable/ac4" />
        </androidx.cardview.widget.CardView>




    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>